--- a/Lessons/M8_ModelPerformance_Part2.Rmd
+++ b/Lessons/M8_ModelPerformance_Part2.Rmd
@@ -57,21 +57,22 @@ $MAPE = \sum|Actual - Forecast|/Actual/n*100$
 actual=c(107,125,115,118,108)
 forecast=c(110,121,112,120,109)
 
+
 #Exercise 1: compute MAD, MSE and MAPE
 n=length(actual)
 
-ME = 
-MSE = 
-RMSE = 
-MAE = 
-MPE = 
-MAPE = 
+ME = sum(actual - forecast)/n
+MSE = sum(actual - forecast)^2/n
+RMSE = sqrt(MSE)
+MAE = (sum(abs(actual - forecast)))/n
+MPE = sum((actual - forecast)/actual)/n*100
+MAPE = (sum(abs(actual - forecast))/actual)/n*100
 
 
 
 #Exercise 2: Compute the forecast accuracy metrics you calculated in Ex 1 with the results from accuracy() function.
-
-
+scores <- accuracy(forecast,actual)  #store the performance metrics
+head(scores)
 ```
 
 ## Importing data
@@ -145,6 +146,17 @@ Which models could be used to forecast the non-seasonal temperature series? When
 ```{r}
 #Exercise 3: Try fitting different model to the deseasonal series. Check the residuals using the checkresiduals() function.
 
+## Arithmetic Mean
+mean_temp <- meanf(y = BR_Temp_ts, h=12)
+checkresiduals(mean_temp)
+
+## Seasonal Naive
+SNAIVE_temp <- snaive(BR_Temp_ts, h=12)
+checkresiduals(SNAIVE_temp)
+
+## SARIMA 
+SARIMA_autofit <- auto.arima(BR_Temp_ts)
+checkresiduals(SARIMA_autofit)
 
 
 ```
